@@ -945,6 +945,8 @@ Release 0.21.0 - Unreleased
    HBASE-3033  [replication] ReplicationSink.replicateEntries improvements
    HBASE-3040  BlockIndex readIndex too slowly in heavy write scenario
                (Andy Chen via Stack)
+   HBASE-3030  The return code of many filesystem operations are not checked
+               (dhruba borthakur via Stack)
 
   NEW FEATURES
    HBASE-1961  HBase EC2 scripts
